# ListaSpesa_P

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Item.cpp  Item.h  Observer.h  README.md  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h  et --hard 8g9h0i1  main.cpp  test.cpp
Tests/: test_item.cpp  test_main.cpp  test_observer.cpp  test_shoppinglist.cpp
